@@ -2,6 +2,7 @@ Revision history for DateTime::Format::Genealogy
 
 0.05
 	Some people use 4 letters for months - handle them
+	Allow more formats to be parsed when not strict
 
 0.04	Sat Apr  3 20:53:13 EDT 2021
 	Warn rather than die on unparseable date
